# rochallor-engine

./: .gitignore  README.md
.github/workflows/: engine-e2e.yml  workflow-modeller.yml
docs/: architecture.md  configuration.md  development.md  getting-started.md  quickstart-even-driven.md  tradeoffs.md  workflow-format.md
e2e/: README.md  docker-compose-kafka-outbox.yml  docker-compose-polling.yml  run.sh
workflow-engine/: Dockerfile  Makefile  docker-compose.yml  go.mod  go.sum
workflow-modeller/: README.md  biome.json  index.html  package.json  playwright.config.ts  pnpm-lock.yaml  tsconfig.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
workflow-sdk-go/: doc.go  go.mod  go.sum
workflow-sdk-java/: build.gradle.kts  gradle.properties  settings.gradle.kts
workflow-sdk-node/: .eslintignore  .eslintrc.cjs  package-lock.json  package.json  tsconfig.json  vitest.config.ts
workflow-sdk-python/: .gitignore  README.md  pyproject.toml
workflow-sdk-python/src/workflow_sdk/: __init__.py  errors.py
workflow-sdk-python/src/workflow_sdk/client/: __init__.py  grpc.py  interface.py  rest.py
workflow-sdk-python/src/workflow_sdk/handler/: __init__.py  registry.py
workflow-sdk-python/src/workflow_sdk/metrics/: __init__.py  metrics.py
workflow-sdk-python/src/workflow_sdk/retry/: __init__.py  backoff.py
workflow-sdk-python/src/workflow_sdk/runner/: __init__.py  deduplication_cache.py  kafka_runner.py  runner.py
workflow-sdk-python/tests/: conftest.py  test_backoff.py  test_client_rest.py  test_handler_registry.py  test_metrics.py  test_runner.py
(+359 files in other folders)
